# miniapp_kcount

./: CMakeDefinitions.txt  CMakeLists.txt  README.md  main.cpp
gpu-utils/: CMakeLists.txt  gpu_common.cpp  gpu_common.cpp.prehip  gpu_common.hpp  hash_funcs.hpp  kmer.cpp  kmer.hpp.prehip
hash_table/: CMakeLists.txt  gpu_hash_funcs.hpp.prehip  gpu_hash_table.cpp  gpu_hash_table.hpp  gpu_hash_table.hpp.prehip  kmer_dht.cpp  kmer_dht.cpp.prehip  kmer_dht.hpp  kmer_dht.hpp.prehip  utils_ht.cpp  utils_ht.hpp
parse_and_pack/: CMakeDefinitions.txt  CMakeLists.txt  parse_and_pack.cpp  parse_and_pack.cpp.prehip  parse_and_pack.hpp
parse_and_pack/gpu-utils/: CMakeLists.txt  gpu_utils.cpp
test_data/: ground_pnp_sorted  reads_10k.fasta  reads_20k.fasta
